intTests/test_type_errors/err053.log.good
 Loading file "err053.saw"
 Type errors:
  err053.saw:8:13-8:27: Inaccessible type: "__DEPRECATED__"
  err053.saw:8:13-8:27: This type is available only after running `enable_deprecated`.

FAILED
